# basic_netai

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: AGENT_ONBOARDING.md  HOW_TO_REPLICATE.md  README.md  REDACTION.md  architecture.md  instruction_manual_ansible_lab.md  ip-plan.md  topology.md
docs/agent-ops/: evaluation.md  safety.md
docs/decisions/: 0000-template.md  0001-monorepo-and-uv.md  0002-ospf-and-udp-syslog.md  README.md
docs/design/: 2026-05-09-ios-exec-aliases.md  2026-05-09-loopback-ospf-redistribution.md  2026-05-10-tigger-TIG-snmp-phased.md
docs/inventory/: it-assets.yaml
docs/journal/: 2026-05-09-ansible-syslog-session.md  2026-05-09-bootstrap.md  2026-05-10-tigger-snmp-a2-verified.md  README.md
docs/monitoring/: snmp.md  syslog.md
docs/monitoring/tig/: README.md  gnmi-roadmap.md  snmp-ios-xe.md
docs/prompts/: README.md
docs/runbooks/: README.md  no_syslog_from_router.md  ospf_neighbor_down.md
infra/ansible/: README.md  ansible.cfg  requirements.yml
infra/ansible/group_vars/: csr_lab.yml
infra/ansible/host_vars/: csr02.yml  csr03.yml
infra/ansible/inventory/: hosts.yml
infra/syslog/: README.md  install_receiver.sh
infra/tig/: dotenv.example  install_chrony.sh  install_grafana.sh  install_influxdb2.sh  install_telegraf_smoke.sh  install_telegraf_snmp_csr.sh  install_ufw_tig.sh  render_telegraf_snmp_fragment.py
infra/tig/grafana/: README.md
src/network_lab/: __init__.py  config.py
tests/: test_inventory.py  test_syslog_read.py
tests/fixtures/: sample_inventory.yaml
(+34 files in other folders)
