[project]
name = "basic-netai"
version = "0.1.0"
description = "Lab tooling and automation for network-capable AI agents (Cisco CSR 1000v)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Brannen Taylor" }]
dependencies = [
    "pyyaml>=6.0.2",
    "scrapli[paramiko]>=2024.01.30",
]

[project.urls]
Repository = "https://github.com/brannentaylor/basic_netai"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "ansible-core>=2.17",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: SSH to real hardware (skipped by default)"]
